# prd-tools

./: .env.example  .gitignore  .prettierignore  ACCESSIBILITY.md  ADMIN_PANEL_IMPLEMENTATION.md  AGENTS.md  APP_STORE_METADATA.md  APP_STORE_VALIDATION_TODO.md  ASO_REQUIREMENTS_CHECKLIST.md  AUDIO_UPDATE_SUMMARY.md  BUILD_FIX_SUMMARY.md  BUILD_PROGRESS_SYSTEM.md  CHANGELOG.md  CLAUDE.md  COMPLETE_FIXES_SUMMARY.md  CRITICAL_FIXES_REQUIRED.md  Cargo.toml  FEEDBACK_UI_IMPLEMENTATION.md  FINAL-4-TASKS-COMPLETION-REPORT.md  FINAL_SOLUTION.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IdleTimerImplementation.md  NOTIFICATIONS.md  OPENAI_API_DOCUMENTATION.md  OpenAI_TTS_Implementation.md  PERFORMANCE-OPTIMIZATION-SUMMARY.md  PERMISSIONS.md  PRISMA-DEPLOYMENT-SUCCESS.md  PRISMA-FILES.txt  README.md  TASK-003-012-COMPLETE.md  TASK-013-018-AUTHENTICATION-COMPLETE.md  TASK-015-E2E-TEST-EXECUTION-REPORT.md  TASK-057-IMPLEMENTATION-SUMMARY.md  TASK-060-COMPLETION-SUMMARY.md  TASK-068-IMPLEMENTATION-SUMMARY.md  TASK-173-ACCESSIBILITY-REPORT.md  TASK-187-COMPLETION.md  TASK-219-LOADING-STATES-COMPLETE.md  (+18 more)
InfiniteStories/: AppConfiguration.swift  ContentView.swift  ImprovedContentView.swift  InfiniteStoriesApp.swift  Info.plist  Item.swift
InfiniteStories.xcodeproj/: project.pbxproj
docs/: ACCESSIBILITY-GUIDE.md  ACCESSIBILITY-QUICK-REFERENCE.md  API.md  API_TESTING.md  AUTHENTICATION.md  BANNER_MESSAGE_v0.6.0.md  DEPLOYMENT.md  DEVELOPMENT.md  FILE-ATTACHMENT-UTILITIES.md  I18N_GUIDE.md  INTEGRATIONS.md  LOADING-STATES.md  MOBILE_APP_PLAN.md  NEXTJS_15_BREAKING_CHANGES.md  NEXTJS_15_DEPENDENCY_AUDIT.md  NEXTJS_15_MIGRATION.md  NEXTJS_15_PHASE3_COMPLETION.md  NEXTJS_15_UPGRADE_COMPLETE.md  OPENAI_INTEGRATION.md  POSTGRESQL_MIGRATION.md  PRD-002.md  PRD-003.md  PRD.md  PRD_TOOLS.md  PRISMA-SETUP.md  QUICK-REFERENCE-FILE-UTILITIES.md  STORYVIEWMODEL_MIGRATION_SUMMARY.md  TASK-098-102-COMPLETION-SUMMARY.md  USER_GUIDE.md  setup-summary.md
dsl/: global.yaml
e2e/: ATTACHMENTS_TESTS_README.md  ATTACHMENTS_TEST_COVERAGE.md  ATTACHMENTS_TEST_EXECUTION_REPORT.md  README-SIDEBAR-TESTS.md  README.md  SIDEBAR_MANUAL_TEST_GUIDE.md  SIDEBAR_TEST_RESULTS.md  auth.spec.ts  feedback-attachments.spec.ts  feedback-enhancements.spec.ts  feedback.spec.ts  panels.spec.ts  questionnaire-create-form.spec.ts  questionnaire-flow.spec.ts  questionnaire.spec.ts  roadmap.spec.ts  sidebar-navigation.spec.ts  sidebar.spec.ts  voting.spec.ts
examples/: test_notifications.rs
infinite-stories-backend/: .dockerignore  API_DOCUMENTATION.md  CHANGELOG.md  (+18 more)
tools/migration/: .env.example  Cargo.toml  MIGRATION_IMPLEMENTATION.md  README.md
tools/migration/src/: config.rs  firebase.rs  main.rs  migrator.rs  models.rs  progress.rs  storage.rs  supabase.rs
tools/prd/: .gitignore  Cargo.toml  IMPROVEMENTS_SUMMARY.md  QUICKSTART.md  README.md  build.sh  create_nextjs_upgrade_tasks.sh
tools/prd/examples/: agent-workflow.sh  multi_agent_workflow.rs  populate_migration_tasks.rs  simple_agent.rs
tools/prd/improvements/: PRD_Improvements.md
tools/prd/migrations/: 001_add_display_ids.sql  007_add_sprints.sql
tools/prd/src/: dashboard.rs  db.rs  db_extensions.rs  lib.rs  main.rs  resolver.rs
tools/prd/src/batch/: complete.rs
tools/prd/src/dashboard/: mod.rs  ui.rs
tools/prd/src/dashboard/tests/: mod.rs
tools/prd/src/errors/: mod.rs
tools/prd/src/errors/tests/: mod.rs
tools/prd/src/git/tests/: mod.rs
tools/prd/src/hooks/: config.rs  mod.rs  tests.rs
tools/prd/src/migrations/: runner.rs
tools/prd/src/suggestions/: mod.rs
tools/prd/src/sync/: doc_scanner.rs  mod.rs  reconcile.rs
tools/prd/src/sync/tests/: scanner_tests.rs
tools/prd/src/visualization/: mod.rs  timeline.rs
tools/prd/src/watcher/: daemon.rs  tests.rs
(+1219 files in other folders)
