[package]
name = "supabase-to-firebase-migration"
version = "1.0.0"
edition = "2021"
authors = ["Captain Dev"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Command line interface
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# UUID support
uuid = { version = "1.10", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Progress tracking
indicatif = "0.17"

# Colored output
colored = "2.1"

# Environment variables
dotenv = "0.15"

# Base64 encoding
base64 = "0.22"

# URL encoding
urlencoding = "2.1"

# Rate limiting
governor = "0.7"

# Database for progress tracking
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }

# Async traits
async-trait = "0.1"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# File operations
tempfile = "3.14"

# Checksum verification
sha2 = "0.10"

[dev-dependencies]
mockito = "1.4"
pretty_assertions = "1.4"